--- a/Cross-sell-Collection-base.liquid
+++ b/Cross-sell-Collection-base.liquid
@@ -1,3 +1,6 @@
+add a class in submit button of form in product-template.liquid
+
+trigger_popup_fricc
 {% comment %} create a cross-sell.liquid snippet {% endcomment %}
 <div class="hover_bkgr_fricc">
     <span class="helper"></span>
